changed a few things

--- a/about.html
+++ b/about.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -156,11 +160,19 @@
                       <div class="offset-top-20"><a href="services.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
                     </div>
                     <div class="darktransparent offset-top-20">
-                      <h5>Meet your Doctor</h5>
-                      <img src="images/users/our-team-06-384x410.jpg" class="unit-center img-responsive">
-                      <h4 class="offset-top-20">Ricky Baker M.D., F.A.C.S.</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                      <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                      <div class="row">
+                        <div class="col-12">
+                          <h5 class="doctor">Meet your Doctor</h5>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-4 col-xxs-12">
+                          <img src="images/users/our-team-06-384x410.jpg" class="unit-center img-responsive">
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-8 col-xxs-12">
+                          <h4 class="offset-md-top-20">Ricky Baker M.D., F.A.C.S.</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          <div class="offset-top-20"><a href="team-member.html" class="btn btn-ellipse btn-primary">Learn More</a></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
               </div>
@@ -175,56 +187,75 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="project">
                         <figure class="img-responsive">
-                            <img class="img-responsive" src="images/users/our-team-06-384x410.jpg">
+                            <img class="img-responsive" src="images/users/our-team-06-384x710.jpg">
                             <span class="actions">
                                 <div class="project-details">
                                   <a href="team-member.html"><h6 class="text-white offset-top-10">Ricky Baker</h6></a>
+                                  <p class="offset-top-10"><i>St Louis University</i></p>
+                                  <ul class="list-inline">
+                                    <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>             
+                                  </ul>
                                 </div>
                             </span>
                         </figure>
-                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="project">
                         <figure class="img-responsive">
-                            <img class="img-responsive" src="images/users/our-team-07-384x410.jpg">
+                            <img class="img-responsive" src="images/users/our-team-07-384x710.jpg">
                             <span class="actions">
                                 <div class="project-details">
                                   <a href="team-member.html"><h6 class="text-white offset-top-10">John Doe</h6></a>
+                                  <p class="offset-top-10"><i>Colombia College</i></p>
+                                  <ul class="list-inline">
+                                    <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>             
+                                  </ul>
                                 </div>
                             </span>
                         </figure>
-                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="project">
                         <figure class="img-responsive">
-                            <img class="img-responsive" src="images/users/our-team-08-384x410.jpg">
+                            <img class="img-responsive" src="images/users/our-team-08-384x710.jpg">
                             <span class="actions">
                                 <div class="project-details">
                                   <a href="team-member.html"><h6 class="text-white offset-top-10">Staci Curtis</h6></a>
+                                  <p class="offset-top-10"><i>University of Texas</i></p>
+                                  <ul class="list-inline">
+                                    <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>             
+                                  </ul>
                                 </div>
                             </span>
                         </figure>
-                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="project">
                         <figure class="img-responsive">
-                            <img class="img-responsive" src="images/users/our-team-09-384x410.jpg">
+                            <img class="img-responsive" src="images/users/our-team-09-384x710.jpg">
                             <span class="actions">
                                 <div class="project-details">
                                   <a href="team-member.html"><h6 class="text-white offset-top-10">Betty Smith</h6></a>
+                                  <p class="offset-top-10"><i>University California Berlkey</i></p>
+                                  <ul class="list-inline">
+                                    <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
+                                    <li><a href="http://linkedin.com" class="icon fa fa-linkedin icon-xxs icon-circle icon-gray-light"></a></li>             
+                                  </ul>
                                 </div>
                             </span>
                         </figure>
-                        <div><a href="team-member.html" class="btn btn-ellipse btn-primary btn-project">Learn More</a></div>
                     </div>
                 </div>
-              </div>
           </div>
         </section>
         <section class="rdparallax">
@@ -265,7 +296,7 @@
       <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
