--- a/contacts.html
+++ b/contacts.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -225,7 +229,7 @@
             <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
