--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -119,7 +123,7 @@
                 <div class="cell-sm-10 cell-md-8 cell-lg-6">
                   <h2><span style="margin-right:70px;">Feel good in</span><br><span style="color:#73308b;"> your own skin</span></h2>
                   <p class="offset-top-30"><b>Get the body you dreamed of</b></p>
-                  <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                  <div class="offset-top-0"><a href="tel:555-555-1212" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                 </div>
               </div>
               <div class="row offset-top-60">
@@ -134,7 +138,7 @@
                           <li>Inceptos Quam</li>
                           <li>Orci Enim</li>
                         </ul>
-                        <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
+                        <div class="offset-top-0"><a href="tel:555-555-1212" class="btn btn-ellipse btn-primary">Call (800) 532-5447</a></div>
                     </div>     
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">What We Can Do For You</h5>
@@ -231,7 +235,7 @@
                          <!-- /.control-box -->                          
                           </div><!-- /#myCarousel -->
                         </div>
-                      <div class="offset-top-0 slideshowbtn"><a href="contacts.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
+                      <div class="offset-top-0 slideshowbtn"><a href="grid-gallery.html" class="btn btn-ellipse btn-primary">View More Before & Afters</a></div>
                     </div>
                   </div>
                   <div class="cell-xs-10 cell-md-4 col-md-4">
@@ -283,36 +287,38 @@
           <div class="shell">
             <div class="offset-top-0 text-left">
               <h5>Meet your Doctor</h5>
-              <div class="row">
-                <div class="col-md-3">
-                  <img src="images/users/our-team-06-384x410.jpg" class="unit-left offset-top-20">
+              <div class="row offset-top-20">
+                <div class="col-md-3 col-lg-3 col-sm-4 col-xs-12">
+                  <img src="images/users/our-team-06-384x410.jpg" class="unit-left">
                 </div>
-                <div class="col-md-9 offset-top-20">
-                  <h4>Ricky Baker M.D., F.A.C.S.</h4>
+                <div class="col-md-9 col-lg-9 col-sm-8 col-xs-12">
+                  <h4 class="offset-lg-top-0 offset-md-top-0 offset-sm-top-0 offset-xs-top-20">Ricky Baker M.D., F.A.C.S.</h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.<br>
-Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
+                    Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan.</p>
                   <div class="offset-top-20">
                     <h6><a href="team-member.html">Read More »</a></h6>
                   </div>
                 </div>
+              </div>
+              <div class="row">
                 <div class="col-md-12 offset-top-50">
                   <div class="shell advert" style="background-image: url(images/backgrounds/implants.jpg);">
-                     <h5 style="font-weight:500;">Breast Augmentation</h5>
-                     <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
-                     <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
+                    <h5 style="font-weight:500;">Breast Augmentation</h5>
+                    <p class="offset-top-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper sit. Mauris a enim faucibus, mollis odio id, bibendum neque. Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsan neque non. Mauris a enim faucibus, mollis odio id, bibendum neque.</p>
+                    <div class="offset-top-30"><a href="contacts.html" class="btn btn-ellipse btn-primary">Get your <strong>free consultation</strong></a></div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-        </section>
+               </div>
+             </div>
+           </div>
+         </section>
       </main>
       <!-- Page Footer-->
       <!-- Default footer-->
       <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
