--- a/team-member.html
+++ b/team-member.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -122,7 +126,7 @@
               </div>
               <div class="row offset-top-60">
                   <div class="cell-xs-10 cell-md-4 col-md-4">
-                    <div class="inset-md-right-20 offset-top-20 darktransparent">
+                    <div class="inset-md-right-20 offset-top-20 darktransparent text-lg-left text-md-left text-sm-center text-xs-center">
                       <img src="images/users/our-team-06-384x410.jpg" alt="" class="img-responsive"/>
                       <div class="member-block-body offset-top-20">
                         <a href="contacts.html" class="btn btn-ellipse btn-primary">make an appointment</a>
@@ -243,7 +247,7 @@
             <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
