--- a/procedure.html
+++ b/procedure.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -122,7 +126,7 @@
                   <div class="offset-top-0"><a href="contacts.html" class="btn btn-ellipse btn-primary">Schedule your free consultation</a></div>
                 </div>
               </div>
-              <div class="row offset-top-60">
+              <div class="row offset-top-34">
                   <div class="cell-xs-10 text-md-left offset-top-20 offset-md-top-0 col-md-8">
                     <div class="lighttransparent offset-top-20">
                       <h5 class="text-primary">Facelift</h5>
@@ -276,7 +280,7 @@ Duis sollicitudin ligula elit, vel vulputate diam ullamcorper at. Aenean accumsa
       <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
