--- a/testimonials.html
+++ b/testimonials.html
@@ -83,6 +83,10 @@
                           </li>
                           <li><a href="procedure.html"><span class="text-middle">Liposuction</span></a>
                           </li>
+                          <li><a href="procedure.html"><span class="text-middle">Body Contouring</span></a>
+                          </li>
+                          <li><a href="procedure.html"><span class="text-middle">Cell Therapy</span></a>
+                          </li>
                         </ul>
                       </li>
                       
@@ -121,19 +125,20 @@
               </div>
               <div class="lighttransparent offset-top-66 section-bottom-85">
                 <h5 class="text-primary">Testimonials</h5>
-                <div data-loop="false" data-margin="15" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light offset-top-66">
+                <div data-loop="false" data-margin="15" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="3" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light offset-top-20">
                   <div class="owl-item">
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Betty Wade</cite>
                             </h6>
-                            <p class="quote-desc text-capitalize text-gray text-italic">Regular Patient</p>
+                            <p class="quote-desc text-capitalize text-gray">Regular Patient</p>
                           </div>
                         </div>
-                        <p class="h4 text-italic text-gray-dark font-size-15">
+                        <p class="text-gray-dark font-size-15">
                           <q>The costs of treatments are very reasonable at Visage and I have always been impressed with the results. The fully medically qualified team at the clinic is professional, friendly and trustworthy.</q>
                         </p>
                       </div>
@@ -143,6 +148,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Stacy Williams</cite>
@@ -160,6 +166,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-joan-anderson-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Joan Anderson</cite>
@@ -177,6 +184,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Betty Wade</cite>
@@ -194,6 +202,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Stacy Williams</cite>
@@ -211,6 +220,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-joan-anderson-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Joan Anderson</cite>
@@ -228,6 +238,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-betty-wade-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Betty Wade</cite>
@@ -245,6 +256,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-bryan-green-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Stacy Williams</cite>
@@ -262,6 +274,7 @@
                     <blockquote class="quote quote-classic">
                       <div class="quote-body">
                         <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                          <div class="unit-left unit-item-narrow"><img width="60" height="60" src="images/users/user-joan-anderson-60x60.jpg" alt="" class="img-circle quote-img"/></div>
                           <div class="unit-body unit-item-wide">
                             <h6 class="quote-author text-capitalize text-bold text-primary">
                               <cite class="text-normal">Joan Anderson</cite>
@@ -287,7 +300,7 @@
             <footer class="section-relative page-footer bg-white context-light">
         <div>
           <div class="pinkfooter">
-            <div class="col-md-12 text-md-center offset-top-20">
+            <div class="col-md-12 text-center offset-top-20">
               <ul class="list-inline">
                 <li><a href="http://facebook.com" class="icon fa fa-facebook icon-xxs icon-circle icon-darker"></a></li>
                 <li><a href="http://twitter.com" class="icon fa fa-twitter icon-xxs icon-circle icon-darker"></a></li>
